# ProgettoPCS2025

./: .gitignore  .gitignoret  CMakeLists.txt  main.cpp  main_test.cpp
Documentation/: plant_uml_documentation.txt
ExportTxt/: CMakeLists.txt  ExportTxt.cpp  ExportTxt.hpp
src/: CMakeLists.txt  PolyhedralMesh.cpp  PolyhedralMesh.hpp  camminominimo.cpp  dualization.cpp
src_test/: CMakeLists.txt  file_test.hpp
